[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/items.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Item.gd" type="Script" id=2]
[ext_resource path="res://Assets/Particles/Round.png" type="Texture" id=3]
[ext_resource path="res://Animations/FlyParticleSwerve.tres" type="Animation" id=4]
[ext_resource path="res://Animations/FadeOut.tres" type="Animation" id=5]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.760227 ), 0.0, 0.0, 0, 0, Vector2( 0.0873494, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.23534, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Item" type="Node2D" groups=[
"Items",
]]
z_as_relative = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 4

[node name="FlyParticles" type="CPUParticles2D" parent="Sprite"]
show_behind_parent = true
position = Vector2( -35.9188, 2.24493 )
amount = 32
lifetime = 0.66
local_coords = false
texture = ExtResource( 3 )
gravity = Vector2( 0, 0 )
scale_amount = 0.08
scale_amount_random = 0.14
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )
hue_variation = -1.0
hue_variation_random = 0.2

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeOut = ExtResource( 5 )
anims/FlyParticleSwerve = ExtResource( 4 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_TeleportTimer_timeout"]
